src/k8s/canary/canary.slack.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: slack
  name: slack
  namespace: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      run: slack
  template:
    metadata:
      labels:
        run: slack
    spec:
      containers:
      - image: gcr.io/kip-styles/slack:canary
        imagePullPolicy: Always
        name: slack
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
