src/k8s/canary/canary.cafe-menu.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: canary
  name: cafe-menu
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cafe-menu
    spec:
      containers:
      - image: gcr.io/kip-styles/cafe-menu:latest
        imagePullPolicy: Always
        name: delivery-picstitch
        ports:
        - containerPort: 8001
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8001
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: cafe-menu
  namespace: canary
  labels:
    run: cafe-menu
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8001
  selector:
    app: cafe-menu
