src/k8s/canary/canary.dashboard.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: canary
  name: dashboard
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - env:
        - name: NODE_ENV
          value: dashboard
        - name: CONFIG_ENV
          value: dashboard
        - name: CONFIG_DIR
          value: /src/config
        image: gcr.io/kip-styles/dashboard:k8s
        imagePullPolicy: Always
        name: cafe
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: canary
  labels:
    run: dashboard
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: dashboard
