src/k8s/canary/canary.delivery_picstitch.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: canary
  name: delivery-picstitch
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: delivery-picstitch
    spec:
      containers:
      - image: gcr.io/kip-styles/delivery_picstitch:latest
        imagePullPolicy: Always
        name: delivery-picstitch
        ports:
        - containerPort: 5000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-picstitch
  namespace: canary
  labels:
    run: delivery-picstitch
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: delivery-picstitch
