src/k8s/canary/canary.payments.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments
  labels:
    app: payments
    role: master
    tier: frontend
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: idk
  - port: 443
    targetPort: 8080
    protocol: TCP
    name: ssl
  selector:
    app: payments
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: payments
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: payments
        role: master
        tier: frontend
    spec:
      containers:
      - name: master
        image: gcr.io/kip-styles/payments:23d7007
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 443
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        resources: {}
        securityContext: {}
