src/k8s/canary/canary.rnn.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rnn
  namespace: canary
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rnn
    spec:
      containers:
      - image: gcr.io/kip-styles/rnn:CANARYIMAGE
        imagePullPolicy: Always
        name: rnn
        ports:
        - containerPort: 8085
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8085
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  namespace: canary
  name: rnn
  labels:
    app: rnn
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8085
  selector:
    app: rnn
