src/k8s/canary/canary.slack.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: slack
  name: slack
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: slack
  type: NodePort
