src/k8s/canary/payment.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments
  namespace: canary
  labels:
    app: payments
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: payments
