src/k8s/canary/rnn.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: rnn
  name: rnn
spec:
  ports:
  - port: 8085
    protocol: TCP
    targetPort: 8085
  selector:
    run: rnn
  type: ClusterIP
