src/k8s/canary/canary.payments.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: payments
  namespace: canary
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - dev-pay.kipthis.com
    secretName: dev-pay-tls
  backend:
    serviceName: payments
    servicePort: 80
