src/k8s/canary/canary.picstitch.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: picstitch
  name: picstitch
  namespace: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      run: picstitch
  template:
    metadata:
      labels:
        run: picstitch
    spec:
      containers:
      - image: gcr.io/kip-styles/picstitch:8a3447f
        imagePullPolicy: Always
        name: picstitch
        ports:
        - containerPort: 5000
          protocol: TCP
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: picstitch
  namespace: canary
  labels:
    run: picstitch
spec:
  type: LoadBalancer
  ports:
  - nodePort: 30010
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    run: picstitch
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: picstitch-ingress
  namespace: canary
spec:
  backend:
    serviceName: picstitch
    servicePort: 5000
  rules:
  - host: dev-picstitch.kipthis.com
    http:
      paths:
      - backend:
          serviceName: picstitch
          servicePort: 5000
