src/k8s/canary/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: canary
  namespace: canary
spec:
  rules:
  - host: dev-picstitch.kipthis.com
    http:
      paths:
      - backend:
          serviceName: picstitch
          servicePort: 80
  - host: dev-parser.kipthis.com
    http:
      paths:
      - backend:
          serviceName: parser
          servicePort: 80
  - host: delivery-picstitch.kipthis.com
    http:
      paths:
      - backend:
          serviceName: delivery-picstitch
          servicePort: 80
  - host: cafe.kipthis.com
    http:
      paths:
      - backend:
        serviceName: cafe-menu
        servicePort: 80
